recursion.lessons.recursion.dragoncurve.DragonCurve2.scala.error
DragonCurve2:12: error: not found: value dragoninverse
		dragoninverse(order-1,z,t,u,v)
                ^DragonCurve2:28: error: not found: value dragoninverse
		dragoninverse(order-1,z,t,u,v)
                ^